[package]
name = "sky-share-be"
version = "0.1.0"
description = "An API server for skyshare."
authors = ["Elton Zheng <elton.zheng@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
ntex = { version = "2", features = ["tokio", "compress"] }
ntex-cors = "2"
ntex-multipart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# The dotenv crate itself appears abandoned as of December 2021 so we now use the dotenvy crate instead. The file format is the same.
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
nanoid = "0.4.0"
image = { version = "0.25", features = ["webp"] }
webp = "0.3"
# ravif = "0.11"
